--- a/frontend/src/assets/locales/en/initiativeAgreement.json
+++ b/frontend/src/assets/locales/en/initiativeAgreement.json
@@ -1,5 +1,6 @@
 {
   "title": "Initiative Agreements",
+  "initiativeAgreement": "Initiative agreement — ID:",
   "editInitiativeAgreementID": "Edit Initiative Agreement ID: ",
   "newInitiativeAgreement": "New Initiative Agreement",
   "actionMsgs": {
@@ -10,6 +11,8 @@
     "successText": "Initiative agreement successfully {{status}}",
     "errorRetrieval": "Error retrieving the record"
   },
-  "deleteConfirmText": "Are you sure you want to delete this draft?",
-  "recommendConfirmText": "Are you sure you want to recommend this initiative agreement?"
+  "deleteDraftConfirmText": "Are you sure you want to delete this draft?",
+  "deleteConfirmText": "Are you sure you want to delete this initiative agreement?",
+  "recommendConfirmText": "Are you sure you want to recommend this initiative agreement?",
+  "approveConfirmText": "Are you sure you want to approve this initiative agreement?"
 }
