feat: implement transactions export ui

--- a/frontend/src/assets/locales/en/transaction.json
+++ b/frontend/src/assets/locales/en/transaction.json
@@ -16,6 +16,8 @@
   "adminAdjustmentId": "Administrative adjustment — ID:",
   "initiativeAgreementId": "Initiative agreement — ID:",
   "noTxnsFound": "No transactions found",
+  "downloadAsExcel": "Download as Excel",
+  "downloadingTxnInfo": "Downloading Transaction Information...",
   "txnDownloadFailMsg": "Failed to download transaction information.",
   "newTransferBtn": "New transfer",
   "newTransactionBtn": "New transaction",
@@ -44,7 +46,7 @@
   "administrativeAdjustment": "Administrative adjustment",
   "organization": "Organization:",
   "selectOrgLabel": "Select organization",
-  "complianceBalance": "Compliance Balance:",
   "loadingBalance": "Loading balance...",
-  "inReserve": "in reserve"
+  "inReserve": "in reserve",
+  "complianceUnitsBalance": "compliance units"
 }
