--- a/frontend/src/assets/locales/en/transaction.json
+++ b/frontend/src/assets/locales/en/transaction.json
@@ -1,7 +1,7 @@
 {
   "title": "Transactions",
   "txnColLabels": {
-    "txnId": "Txn Id",
+    "txnId": "Txn d",
     "compliancePeriod": "Compliance period",
     "type": "Type",
     "organizationFrom": "From",
