--- a/frontend/src/assets/locales/en/adminAdjustment.json
+++ b/frontend/src/assets/locales/en/adminAdjustment.json
@@ -14,5 +14,6 @@
   "deleteDraftConfirmText": "Are you sure you want to delete this draft?",
   "deleteConfirmText": "Are you sure you want to delete this admin adjustment?",
   "recommendConfirmText": "Are you sure you want to recommend this admin adjustment?",
-  "approveConfirmText": "Are you sure you want to approve this administrative adjustment?"
+  "approveConfirmText": "Are you sure you want to approve this administrative adjustment?",
+  "loadingText": "Loading Administrative Adjustment"
 }
