fix: bug fixes and loading indicator on modal button

--- a/frontend/src/assets/locales/en/transaction.json
+++ b/frontend/src/assets/locales/en/transaction.json
@@ -27,7 +27,6 @@
   "valuePerUnit": "Value Per Unit",
   "status": "Status",
   "allOrganizations": "All organizations",
-  "complianceBalance": "Compliance balance",
   "showTransactionsInvolve": "Show transactions involving",
   "selectOrganizationName": "Select organization name",
   "internalCommentsOptional": "Internal comments (optional)",
@@ -50,8 +49,10 @@
   "administrativeAdjustment": "Administrative adjustment",
   "organization": "Organization:",
   "selectOrgLabel": "Select organization",
-  "complianceBalance": "Compliance Balance:",
+  "complianceBalance": "Compliance balance:",
   "loadingBalance": "Loading balance...",
+  "loadingText": "Loading...",
+  "processingText": "Processing...",
   "inReserve": "in reserve",
   "txnHistoryLabel": "Transaction History",
   "txnHistory": {
