feat: vitest fixes and view organization tests complete

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -2,6 +2,7 @@
   "newFuelCodeBtn": "New fuel code",
   "noFuelCodesFound": "No fuel codes found",
   "fuelCodeDownloadBtn": "Download as excel",
+  "fuelCodeDownloadingMsg": "Downloading fuel codes information",
   "fuelCodeDownloadFailMsg": "Failed to download fuel code information.",
   "fuelCodeLoadFailMsg": "Failed to load fuel code information.",
   "newFuelCodeTitle": "Add new fuel code(s)",
