feat: fp location auto select

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -35,7 +35,9 @@
     "feedstock": "Feedstock",
     "feedstockLocation": "Feedstock location",
     "misc": "Misc (e.g. CCS, EOR, waste steam, non rendered, etc.,)",
-    "fuelProductionFacilityLocation": "Fuel production facility location",
+    "fuelProductionFacilityCity": "Fuel production facility city",
+    "fuelProductionFacilityProvinceState": "FP facility province/state",
+    "fuelProductionFacilityCountry": "FP facility country",
     "facilityNameplateCapacity": "Facility nameplate capacity",
     "feedstockTransportMode": "Feedstock transport mode",
     "finishedFuelTransportMode": "Finished fuel transport mode",
