feat: add contact name and email to fuel code

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -26,6 +26,8 @@
     "prefix": "Prefix",
     "fuelCode": "Fuel code",
     "company": "Company",
+    "contactName": "Contact Name",
+    "contactEmail": "Contact Email",
     "carbonIntensity": "Carbon intensity (gCO2E/MJ)",
     "edrms": "EDRMS#",
     "applicationDate": "Application date",
