--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -36,6 +36,7 @@
     "feedstock": "Feedstock",
     "feedstockLocation": "Feedstock location",
     "misc": "Misc (e.g. CCS, EOR, waste steam, non rendered, etc.,)",
+    "fuelProductionFacilityLocation": "Fuel production facility location",
     "fuelProductionFacilityCity": "Fuel production facility city",
     "fuelProductionFacilityProvinceState": "FP facility province/state",
     "fuelProductionFacilityCountry": "FP facility country",
