--- a/frontend/src/assets/locales/en/notionalTransfer.json
+++ b/frontend/src/assets/locales/en/notionalTransfer.json
@@ -12,7 +12,7 @@
   "notionalTransferAddSuccessMsg": "Notional transfer(s) added successfully.",
   "notionalTransferDeleteSuccessMsg": "Notional transfer deleted successfully.",
   "notionalTransferAddFailMsg": "Failed to add notional transfer(s).",
-  "saveDraftNotionalTransferBtn": "Save draft notional transfer",
+  "saveNotionalTransferBtn": "Save notional transfers",
   "deleteNotionalTransferBtn": "Delete notional transfer",
   "deleteNotionalTransfer": "Delete notional transfer",
   "deleteConfirmText": "Are you sure you want to delete this notional transfer?",
@@ -23,11 +23,11 @@
   "rows": "rows",
   "notionalTransferColLabels": {
     "complianceReportId": "Compliance Report ID",
-    "quantity": "Quantity",
-    "legalName": "Legal Name",
-    "addressForService": "Address for Service",
-    "fuelCategoryId": "Fuel Category ID",
-    "receivedOrTransferred": "Received or Transferred",
+    "quantity": "Quantity (L)",
+    "legalName": "Legal name of trading partner",
+    "addressForService": "Address for service",
+    "fuelCategory": "Fuel category",
+    "receivedOrTransferred": "Received OR Transferred",
     "lastUpdated": "Last updated",
     "status": "Status",
     "transferId": "Transfer ID",
