feat: notional transfer summary table

--- a/frontend/src/assets/locales/en/notionalTransfer.json
+++ b/frontend/src/assets/locales/en/notionalTransfer.json
@@ -1,4 +1,5 @@
 {
+  "summaryTitle": "Notional transfers of eligible renewable fuel",
   "newNotionalTransferBtn": "New notional transfer",
   "noNotionalTransfersFound": "No notional transfers found",
   "notionalTransferDownloadBtn": "Download as excel",
