feat: test files added

--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -31,7 +31,7 @@
     "legalName": "Legal Name",
     "units": "Units",
     "expectedUse": "Expected Use",
-    "otherExpectedUse": "Other Use",
+    "otherExpectedUse": "Rationale",
     "rationale": "Rationale",
     "lastUpdated": "Last updated",
     "status": "Status",
