--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -31,5 +31,6 @@
   "introH3": "About this form",
   "introH3Details": "<p>The values and calculations provided in this report are for informational purposes only and are subject to change at any time as a result of administrative and legislative changes. The Declaration & Summary section of this Compliance Report compiles information from the other schedules of this report. This is the last section users should complete.</p>",
   "questions": "Questions?",
-  "contact": "<p>Please contact <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a> with any questions you may have about this form.</p>"
+  "contact": "<p>Please contact <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a> with any questions you may have about this form.</p>",
+  "reportDetails": "Report details"
 }
