LCFS - FSE, display on report details #713

--- a/frontend/src/assets/locales/en/finalSupplyEquipment.json
+++ b/frontend/src/assets/locales/en/finalSupplyEquipment.json
@@ -30,6 +30,7 @@
     "supplyFrom": "Supply date range",
     "supplyFromDate": "Dates of supply from",
     "supplyToDate": "Dates of supply to",
+    "registrationNbr": "Registration #",
     "serialNbr": "Serial #",
     "manufacturer": "Manufacturer",
     "levelOfEquipment": "Level of equipment",
