feat: facility nameplate capacity units in fuel code

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -43,6 +43,7 @@
     "fuelProductionFacilityProvinceState": "FP facility province/state",
     "fuelProductionFacilityCountry": "FP facility country",
     "facilityNameplateCapacity": "Facility nameplate capacity",
+    "facilityNameplateCapacityUnit": "Unit",
     "feedstockTransportMode": "Feedstock transport mode",
     "finishedFuelTransportMode": "Finished fuel transport mode",
     "formerCompany": "Former company",
