--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -32,5 +32,15 @@
   "introH3Details": "<p>The values and calculations provided in this report are for informational purposes only and are subject to change at any time as a result of administrative and legislative changes. The Declaration & Summary section of this Compliance Report compiles information from the other schedules of this report. This is the last section users should complete.</p>",
   "questions": "Questions?",
   "contact": "<p>Please contact <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a> with any questions you may have about this form.</p>",
-  "reportDetails": "Report details"
+  "reportDetails": "Report details",
+  "summaryAndDeclaration": "Summary & declaration",
+  "addRenewableFuelRetention": "Add a renewable fuel retention or obligation deferral",
+  "errorRetrieving": "Error retrieving the record",
+  "renewableFuelTargetSummary": "Renewable fuel target summary",
+  "lowCarbonFuelTargetSummary": "Low carbon fuel target summary",
+  "nonCompliancePenaltySummary": "Non-compliance penalty payable summary",
+  "signingAuthorityDeclaration": "Signing authority declaration",
+  "declarationText": "I certify that the information in this report is true and complete to the best of my knowledge and I understand that I may be required to provide to the Director records evidencing the truth of that information.",
+  "submitReport": "Submit Report",
+  "pleaseCheckDeclaration": "Please certify the information before submitting"
 }
