--- a/frontend/src/assets/locales/en/organization.json
+++ b/frontend/src/assets/locales/en/organization.json
@@ -54,5 +54,24 @@
   "complianceUnits": "compliance units",
   "complianceUnitBalance": "Compliance Unit Balance",
   "inReserve": "in reserve",
-  "inReserveTooltip": "In-reserve are the portion of compliance units in your balance that are currently pending the completion of a transaction. For example, transferring credits to another organization or a compliance report awaiting assessment by the director. Compliance units that are in-reserve cannot be transferred or otherwise used until the pending transaction has been completed."
+  "inReserveTooltip": "In-reserve are the portion of compliance units in your balance that are currently pending the completion of a transaction. For example, transferring credits to another organization or a compliance report awaiting assessment by the director. Compliance units that are in-reserve cannot be transferred or otherwise used until the pending transaction has been completed.",
+  "cards": {
+    "orgTransactions": {
+      "title": "Transactions",
+      "orgHas": "{{name}} has:",
+      "transfersInProgress": "Transfer(s) in progress",
+      "organizationsRegistered": "Organizations registered for transfers",
+      "startNewTransfer": "Start a new transfer",
+      "loading": "Loading transactions card..."
+    },
+    "transactions": {
+      "title": "Transactions",
+      "thereAre": "There are:",
+      "transfersInProgress": "Transfer(s) in progress",
+      "initiativeAgreementsInProgress": "Initiative agreement(s) in progress",
+      "administrativeAdjustmentsInProgress": "Administrative adjustment(s) in progress",
+      "viewAllTransactions": "View all transactions",
+      "loading": "Loading transactions card..."
+    }
+  }
 }
