Feat: LCFS - FSE date range default #714

--- a/frontend/src/assets/locales/en/common.json
+++ b/frontend/src/assets/locales/en/common.json
@@ -49,5 +49,7 @@
       "title": "Low Carbon Fuel Standard",
       "link": "Visit our website at:<br /><a href=\"http://gov.bc.ca/lowcarbonfuels\" aria-label=\"Visit the LCFS Website\">gov.bc.ca/lowcarbonfuels</a>"
     }
-  }
+  },
+  "scrollToTop": "Scroll to top",
+  "scrollToBottom": "Scroll to bottom"
 }
