feat: display fuel supply in report details section

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -44,5 +44,6 @@
   "submitReport": "Submit Report",
   "pleaseCheckDeclaration": "Please certify the information before submitting",
   "expandAll": "expand all",
-  "collapseAll": "collapse all"
+  "collapseAll": "collapse all",
+  "fuelSupply": "Fuel supply"
 }
