fix: resolve column heading display issue in Fuel Supply section

--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -25,7 +25,8 @@
     "ciOfFuel": "CI of fuel",
     "energyDensity": "Energy density",
     "eer": "EER",
-    "energy": "Energy"
+    "energy": "Energy",
+    "determiningCarbonIntensity": "Determining carbon intensity"
   },
   "validateMsg": {
     "isRequired": "{{field}} is required"
