--- a/frontend/src/assets/locales/en/otherUses.json
+++ b/frontend/src/assets/locales/en/otherUses.json
@@ -2,7 +2,7 @@
   "summaryTitle": "Other uses of suitable fuels",
   "newOtherUsesBtn": "New other use entry",
   "noOtherUsesFound": "No other uses found",
-  "otherUsesDownloadBtn": "Download as excel",
+  "otherUsesDownloadBtn": "Download as Excel",
   "otherUsesDownloadingMsg": "Downloading other uses information",
   "otherUsesDownloadFailMsg": "Failed to download other uses information.",
   "otherUsesLoadFailMsg": "Failed to load other uses information.",
