feat: allocation fields cleanup

--- a/frontend/src/assets/locales/en/allocationAgreement.json
+++ b/frontend/src/assets/locales/en/allocationAgreement.json
@@ -5,27 +5,22 @@
   "allocationAgreementSubtitle": "Enter allocation agreement details below",
   "allocationAgreementColLabels": {
     "transaction": "Transaction",
-    "legalName": "Legal name of transaction partner",
-    "addressForService": "Address for service",
-    "email": "Email",
-    "phone": "Phone",
+    "transactionPartner": "Legal name of transaction partner",
+    "postalAddress": "Address for service",
+    "transactionPartnerEmail": "Email",
+    "transactionPartnerPhone": "Phone",
     "fuelType": "Fuel type",
     "fuelCategory": "Fuel category",
     "carbonIntensity": "Determining carbon intensity",
     "fuelCode": "Fuel code",
-    "ciOfFuel": "CI of fuel",
+    "ciFuel": "CI of fuel",
     "quantity": "Quantity",
     "units": "Units",
     "agreementType": "Agreement Type",
-    "tradingPartner": "Trading Partner",
     "allocationAgreement": "Allocation Agreement",
     "complianceReportId": "Compliance Report ID",
     "allocationAgreementId": "Allocation Agreement ID",
-    "transactionType": "Transaction Type",
-    "tradingPartnerAddress": "Trading Partner Address",
-    "tradingPartnerEmail": "Trading Partner Email",
-    "tradingPartnerPhone": "Trading Partner Phone",
-    "fuelTypeOther": "Other Fuel Type",
+    "fuelTypeOther": "Fuel type other",
     "determiningCarbonIntensity": "Determining Carbon Intensity",
     "energyDensity": "Energy Density"
   }
