--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -16,6 +16,13 @@
   "reportActivities": "Report activities",
   "orgDetails": "Organization details",
   "supportingDocs": "Supporting documents",
+  "assessment": "Assessment",
+  "assessmentLn1": "{{name}} <strong>has met</strong> renewable fuel targets set under section 9 of the <i>Low Carbon Fuels Act.</i>",
+  "assessmentLn2": "{{name}} <strong>has met</strong> the low carbon fuel targets set under section 12 of the <i>Low Carbon Fuels Act.</i>",
+  "assessmentLn3": "<strong>Assessed on {{assessedDate}}</strong> by the director under the <i>Low Carbon Fuels Act.</i>",
+  "impInfoTitle": "Important information",
+  "impInfo": "If you become aware that this report is incomplete or inaccurate, you must submit a supplemental report within 30 days.",
+  "createSupplementalRptBtn": "Create supplemental report",
   "clickDrag": "Click or drag files to upload",
   "acceptedFormats": "Formats accepted are .pdf, .doc",
   "activityLinksList": "Click links to report activities",
