--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -1,7 +1,7 @@
 {
   "title": "Compliance reporting",
   "complianceReport": "Compliance report",
-  "newReportBtn": "New complaince report",
+  "newReportBtn": "New compliance report",
   "reportColLabels": {
     "compliancePeriod": "Compliance period",
     "organization": "Organization",
