--- a/frontend/src/assets/locales/en/fuelSupply.json
+++ b/frontend/src/assets/locales/en/fuelSupply.json
@@ -21,7 +21,7 @@
     "quantity": "Quantity supplied",
     "units": "Units",
     "complianceUnits": "Compliance units",
-    "ciLimit": "CI limit",
+    "targetCI": "Target CI",
     "ciOfFuel": "CI of fuel",
     "energyDensity": "Energy density",
     "eer": "EER",
