feat: Add Save Return to Compliance Pages
* Add a save and return button beneath all tables in Compliance Reporting
* Expand BCGrid to support this functionality since validity of rows impacts how it works
* Remove Callable Model, looks  to be an old dead modal built using bootstrap
* Fix incorrect route constant
* Remove deprecated reactiveCustomComponents attribute

--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -63,5 +63,8 @@
   "pleaseCheckDeclaration": "Please certify the information before submitting",
   "expandAll": "expand all",
   "collapseAll": "collapse all",
-  "fuelSupply": "Fuel supply"
+  "fuelSupply": "Fuel supply",
+  "returnToReport": "Return to report",
+  "incompleteReport": "Incomplete data will not be saved, cancel to fix.",
+  "saveReturn": "Save & return to report"
 }
