--- a/frontend/src/assets/locales/en/fuelExport.json
+++ b/frontend/src/assets/locales/en/fuelExport.json
@@ -22,7 +22,7 @@
     "quantity": "Quantity supplied",
     "units": "Units",
     "complianceUnits": "Compliance units",
-    "ciLimit": "CI limit",
+    "targetCI": "Target CI",
     "ciOfFuel": "CI of fuel",
     "energyDensity": "Energy density",
     "eer": "EER",
