feat: Improve Fuel Codes and Tables
* Fix saving issues with Fuel Code and Fuel Code Other
* Update Fuel codes code to be a suffix, since the final fuel code is calculated
*Add a fuel code that can be used for display
* Use new display property to align dropdown options and values
* Better names for Schema validation for Fuel Supply
* Add missing required stars to Add Fuel Code table
* Clean up and refactor row error validation to a more standard format
* Add logic to handle and display warnings

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -25,6 +25,7 @@
     "fuelCodeId": "Fuel Code Id",
     "status": "Status",
     "prefix": "Prefix",
+    "fuelSuffix": "Iteration",
     "fuelCode": "Fuel code",
     "company": "Company",
     "contactName": "Contact Name",
