LCFS - Format Compliance Report for Submitted Status #879

--- a/frontend/src/assets/locales/en/internalComment.json
+++ b/frontend/src/assets/locales/en/internalComment.json
@@ -7,6 +7,7 @@
   "editComment": "Edit comment:",
   "commentToDirector": "Comments to the director to support your recommendation (optional):",
   "commentToAnalyst": "Comments to the analyst (optional):",
+  "commentToComplianceManager": "Comments to the compliance manager (optional):",
   "edit": "[Edit]",
   "edited": "Edited"
 }
