feat: add user activity table for BCeID and IDIR users

--- a/frontend/src/assets/locales/en/admin.json
+++ b/frontend/src/assets/locales/en/admin.json
@@ -12,6 +12,7 @@
   "MobilePhone": "Mobile phone",
   "Title": "Title",
   "usersNotFound": "No users found",
+  "activitiesNotFound": "No user activities found",
   "newUserBtn": "New user",
   "userColLabels": {
     "userName": "User name",
