fix: address report history display for BCeID, export fuel button, and fuel code labels

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -28,8 +28,8 @@
     "fuelSuffix": "Iteration",
     "fuelCode": "Fuel code",
     "company": "Company",
-    "contactName": "Contact Name",
-    "contactEmail": "Contact Email",
+    "contactName": "Contact name",
+    "contactEmail": "Contact email",
     "carbonIntensity": "Carbon intensity (gCO2E/MJ)",
     "edrms": "EDRMS#",
     "applicationDate": "Application date",
