--- a/frontend/src/assets/locales/en/reports.json
+++ b/frontend/src/assets/locales/en/reports.json
@@ -44,6 +44,7 @@
   },
   "savedSuccessText": "Compliance report successfully saved",
   "submitConfirmText": "Are you sure you want to sign and submit this compliance report?",
+  "deleteConfirmText": "Are you sure you want to delete this compliance report?",
   "recommendConfirmText": "Are you sure you want to recommend this compliance report?",
   "assessConfirmText": "Are you sure you want to assess this compliance report?",
   "uploadLabel": "Upload supporting documents for your report.",
@@ -59,6 +60,7 @@
   "contact": "<p>Please contact <a href='mailto:lcfs@gov.bc.ca'>lcfs@gov.bc.ca</a> with any questions you may have about this form.</p>",
   "reportDetails": "Report details",
   "summaryAndDeclaration": "Summary & declaration",
+  "summary": "Summary",
   "addRenewableFuelRetention": "Add a renewable fuel retention or obligation deferral",
   "errorRetrieving": "Error retrieving the record",
   "renewableFuelTargetSummary": "Renewable fuel target summary",
