fix: add missing counts to director review widget and correct title casing

--- a/frontend/src/assets/locales/en/dashboard.json
+++ b/frontend/src/assets/locales/en/dashboard.json
@@ -1,6 +1,6 @@
 {
   "directorReview": {
-    "title": "Director Review",
+    "title": "Director review",
     "loadingMessage": "Loading director review items...",
     "thereAre": "There are:",
     "transfersForReview": "Transfer(s) for your review and statutory decision",
