review comments fix

--- a/frontend/src/assets/locales/en/fuelCode.json
+++ b/frontend/src/assets/locales/en/fuelCode.json
@@ -45,7 +45,7 @@
     "fuelProductionFacilityCountry": "FP facility country",
     "facilityNameplateCapacity": "Facility nameplate capacity",
     "facilityNameplateCapacityUnit": "Unit",
-    "feedstockTransportMode": "Feedstock transport mode",
+    "feedstockFuelTransportMode": "Feedstock transport mode",
     "finishedFuelTransportMode": "Finished fuel transport mode",
     "formerCompany": "Former company",
     "lastUpdated": "Last updated",
